--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div style="text-align: center; width: 50%; margin-left: 25%; color:white;">
-    <img src="./assets/images/myimg.jpg" alt="motivational image" style="width:100%">
+    <img src="./assets/images/myimg.jpg" alt="motivational image" style="width:100%; border:5px solid white">
     <h1 style="font-family: libre-baskerville-regular, serif; text-transform: uppercase;">Ouse ser livre</h1>
     <p style="text-transform:lowercase;">ouse ser você.</p>
   </div>
